added border to blackchain grid

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <img
         class="absolute -z-10 -top-10 -right-28 h-[60vw]"
-        src="./images/hero-bg.png"
+        src="./public/hero-bg.png"
         alt=""
       />
     </div>
@@ -742,38 +742,38 @@
       </h3>
       <div id="data" class="grid grid-cols-3">
         <div class="flex flex-col gap-3 items-center mb-10">
-          <img class="h-16 flex" src="./images/one.svg" alt="" />
+          <img class="h-16 flex" src="./public/one.svg" alt="" />
           <h5 class="text-6xl font-bold">50+</h5>
           <p class="text-center text-base text-slate-600">
             Hackathons and summits
           </p>
         </div>
         <div class="flex flex-col gap-3 items-center mb-10">
-          <img class="h-16 flex" src="./images/two.svg" alt="" />
+          <img class="h-16 flex" src="./public/two.svg" alt="" />
           <h5 class="text-6xl font-bold">1,000+</h5>
           <p class="text-center text-base text-slate-600">
             Hours of educational talks
           </p>
         </div>
         <div class="flex flex-col gap-3 items-center mb-10">
-          <img class="h-16 flex" src="./images/three.svg" alt="" />
+          <img class="h-16 flex" src="./public/three.svg" alt="" />
           <h5 class="text-6xl font-bold">6,000+</h5>
           <p class="text-center text-base text-slate-600">Projects created</p>
         </div>
         <div class="flex flex-col gap-3 items-center">
-          <img class="h-16 flex" src="./images/four.svg" alt="" />
+          <img class="h-16 flex" src="./public/four.svg" alt="" />
           <h5 class="text-6xl font-bold">70k+</h5>
           <p class="text-center text-base text-slate-600">Members onboarded</p>
         </div>
         <div class="flex flex-col gap-3 items-center">
-          <img class="h-16 flex" src="./images/five.svg" alt="" />
+          <img class="h-16 flex" src="./public/five.svg" alt="" />
           <h5 class="text-6xl font-bold">$4.5M+</h5>
           <p class="text-center text-base text-slate-600">
             Worth of prizes given away
           </p>
         </div>
         <div class="flex flex-col gap-3 items-center">
-          <img class="h-16 flex" src="./images/six.svg" alt="" />
+          <img class="h-16 flex" src="./public/six.svg" alt="" />
           <h5 class="text-6xl font-bold">$250M+</h5>
           <p class="text-center text-base text-slate-600">
             Raised as companies
@@ -999,7 +999,7 @@
       </h3>
       <div id="blockchain-grid" class="p-10 grid grid-cols-5 gap-8">
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1010,7 +1010,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1021,7 +1021,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1032,7 +1032,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1043,7 +1043,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1054,7 +1054,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1065,7 +1065,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1076,7 +1076,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1087,7 +1087,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1098,7 +1098,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1197,7 +1197,9 @@
               placeholder="Your email address"
               class="px-6 h-16 w-96 outline-none border-2 rounded-l-lg border-r-0 border-slate-500 active:border-black"
             />
-            <button class="bg-black text-white px-6 h-16 border-2 border-black rounded-r-lg">
+            <button
+              class="bg-black text-white px-6 h-16 border-2 border-black rounded-r-lg"
+            >
               <svg
                 width="18"
                 viewBox="0 0 18 18"
@@ -1241,7 +1243,7 @@
         </div>
       </div>
       <div class="w-full flex justify-between py-6">
-        <p class=" text-slate-400">© 2025 ETHGlobal. All rights reserved.</p>
+        <p class="text-slate-400">© 2025 ETHGlobal. All rights reserved.</p>
         <div id="socials" class="flex gap-4">
           <svg
             width="31"
