--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
       </h3>
       <div id="blockchain-grid" class="p-10 grid grid-cols-5 gap-8">
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1010,7 +1010,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1021,7 +1021,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1032,7 +1032,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1043,7 +1043,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1054,7 +1054,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1065,7 +1065,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1076,7 +1076,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1087,7 +1087,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1098,7 +1098,7 @@
           <p>Polygon</p>
         </div>
         <div
-          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100"
+          class="flex flex-col gap-4 hover:bg-slate-100 w-[16vw] h-[16vw] hover:-translate-y-3 items-center justify-center rounded-lg border-2 border-slate-100 duration-200"
         >
           <img
             src="https://ethglobal.b-cdn.net/organizations/qy8m3/square-logo/default.png"
@@ -1108,6 +1108,7 @@
           />
           <p>Polygon</p>
         </div>
+        
       </div>
       <div class="flex items-center justify-center">
         <button
